[package]
name = "dir-tree"
version = "0.0.1"
authors = ["Abhay Garg"]
edition = "2018"
description = "Creates a JavaScript object representing a directory tree"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.47"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
